plang/testing/logs/false-incorrect/102/program102.p.p.out
Error at bB h jr K E :- ((n); o).:8:14 error: 
bB h jr K E :- ((n); o).
             ^
Error at bB h jr K E :- ((n); o).:8:18 error: 
bB h jr K E :- ((n); o).
                 ^
Error at bB h jr K E :- ((n); o).:8:22 error: 
bB h jr K E :- ((n); o).
                     ^
Error at tTAGu (a7D d0 e) hdLad (RL) :- ((dv (GA) X9Eq (T) wUhr; o0wra, (oadQ5 cd43j)); fX8Q (nOoE) (q (xcQ Pe Wes) Kf); i (SJvG) (na0), kFE v5ZkR YOTj; l (D73Dt) S4s7 (vV i9Q9), fBPH TB).:20:30 error: 
tTAGu (a7D d0 e) hdLad (RL) :- ((dv (GA) X9Eq (T) wUhr; o0wra, (oadQ5 cd43j)); fX8Q (nOoE) (q (xcQ Pe Wes) Kf); i (SJvG) (na0), kFE v5ZkR YOTj; l (D73Dt) S4s7 (vV i9Q9), fBPH TB).
                             ^
Error at tTAGu (a7D d0 e) hdLad (RL) :- ((dv (GA) X9Eq (T) wUhr; o0wra, (oadQ5 cd43j)); fX8Q (nOoE) (q (xcQ Pe Wes) Kf); i (SJvG) (na0), kFE v5ZkR YOTj; l (D73Dt) S4s7 (vV i9Q9), fBPH TB).:20:54 error: 
tTAGu (a7D d0 e) hdLad (RL) :- ((dv (GA) X9Eq (T) wUhr; o0wra, (oadQ5 cd43j)); fX8Q (nOoE) (q (xcQ Pe Wes) Kf); i (SJvG) (na0), kFE v5ZkR YOTj; l (D73Dt) S4s7 (vV i9Q9), fBPH TB).
                                                     ^
Error at tTAGu (a7D d0 e) hdLad (RL) :- ((dv (GA) X9Eq (T) wUhr; o0wra, (oadQ5 cd43j)); fX8Q (nOoE) (q (xcQ Pe Wes) Kf); i (SJvG) (na0), kFE v5ZkR YOTj; l (D73Dt) S4s7 (vV i9Q9), fBPH TB).:20:61 error: 
tTAGu (a7D d0 e) hdLad (RL) :- ((dv (GA) X9Eq (T) wUhr; o0wra, (oadQ5 cd43j)); fX8Q (nOoE) (q (xcQ Pe Wes) Kf); i (SJvG) (na0), kFE v5ZkR YOTj; l (D73Dt) S4s7 (vV i9Q9), fBPH TB).
                                                            ^
Error at tTAGu (a7D d0 e) hdLad (RL) :- ((dv (GA) X9Eq (T) wUhr; o0wra, (oadQ5 cd43j)); fX8Q (nOoE) (q (xcQ Pe Wes) Kf); i (SJvG) (na0), kFE v5ZkR YOTj; l (D73Dt) S4s7 (vV i9Q9), fBPH TB).:20:75 error: 
tTAGu (a7D d0 e) hdLad (RL) :- ((dv (GA) X9Eq (T) wUhr; o0wra, (oadQ5 cd43j)); fX8Q (nOoE) (q (xcQ Pe Wes) Kf); i (SJvG) (na0), kFE v5ZkR YOTj; l (D73Dt) S4s7 (vV i9Q9), fBPH TB).
                                                                          ^
Error at tTAGu (a7D d0 e) hdLad (RL) :- ((dv (GA) X9Eq (T) wUhr; o0wra, (oadQ5 cd43j)); fX8Q (nOoE) (q (xcQ Pe Wes) Kf); i (SJvG) (na0), kFE v5ZkR YOTj; l (D73Dt) S4s7 (vV i9Q9), fBPH TB).:20:110 error: 
tTAGu (a7D d0 e) hdLad (RL) :- ((dv (GA) X9Eq (T) wUhr; o0wra, (oadQ5 cd43j)); fX8Q (nOoE) (q (xcQ Pe Wes) Kf); i (SJvG) (na0), kFE v5ZkR YOTj; l (D73Dt) S4s7 (vV i9Q9), fBPH TB).
                                                                                                             ^
Error at tTAGu (a7D d0 e) hdLad (RL) :- ((dv (GA) X9Eq (T) wUhr; o0wra, (oadQ5 cd43j)); fX8Q (nOoE) (q (xcQ Pe Wes) Kf); i (SJvG) (na0), kFE v5ZkR YOTj; l (D73Dt) S4s7 (vV i9Q9), fBPH TB).:20:126 error: 
tTAGu (a7D d0 e) hdLad (RL) :- ((dv (GA) X9Eq (T) wUhr; o0wra, (oadQ5 cd43j)); fX8Q (nOoE) (q (xcQ Pe Wes) Kf); i (SJvG) (na0), kFE v5ZkR YOTj; l (D73Dt) S4s7 (vV i9Q9), fBPH TB).
                                                                                                                             ^
Error at tTAGu (a7D d0 e) hdLad (RL) :- ((dv (GA) X9Eq (T) wUhr; o0wra, (oadQ5 cd43j)); fX8Q (nOoE) (q (xcQ Pe Wes) Kf); i (SJvG) (na0), kFE v5ZkR YOTj; l (D73Dt) S4s7 (vV i9Q9), fBPH TB).:20:142 error: 
tTAGu (a7D d0 e) hdLad (RL) :- ((dv (GA) X9Eq (T) wUhr; o0wra, (oadQ5 cd43j)); fX8Q (nOoE) (q (xcQ Pe Wes) Kf); i (SJvG) (na0), kFE v5ZkR YOTj; l (D73Dt) S4s7 (vV i9Q9), fBPH TB).
                                                                                                                                             ^
Error at tTAGu (a7D d0 e) hdLad (RL) :- ((dv (GA) X9Eq (T) wUhr; o0wra, (oadQ5 cd43j)); fX8Q (nOoE) (q (xcQ Pe Wes) Kf); i (SJvG) (na0), kFE v5ZkR YOTj; l (D73Dt) S4s7 (vV i9Q9), fBPH TB).:20:168 error: 
tTAGu (a7D d0 e) hdLad (RL) :- ((dv (GA) X9Eq (T) wUhr; o0wra, (oadQ5 cd43j)); fX8Q (nOoE) (q (xcQ Pe Wes) Kf); i (SJvG) (na0), kFE v5ZkR YOTj; l (D73Dt) S4s7 (vV i9Q9), fBPH TB).
                                                                                                                                                                       ^
Error at tTAGu (a7D d0 e) hdLad (RL) :- ((dv (GA) X9Eq (T) wUhr; o0wra, (oadQ5 cd43j)); fX8Q (nOoE) (q (xcQ Pe Wes) Kf); i (SJvG) (na0), kFE v5ZkR YOTj; l (D73Dt) S4s7 (vV i9Q9), fBPH TB).:20:177 error: 
tTAGu (a7D d0 e) hdLad (RL) :- ((dv (GA) X9Eq (T) wUhr; o0wra, (oadQ5 cd43j)); fX8Q (nOoE) (q (xcQ Pe Wes) Kf); i (SJvG) (na0), kFE v5ZkR YOTj; l (D73Dt) S4s7 (vV i9Q9), fBPH TB).
                                                                                                                                                                                ^