plang/testing/logs/false-incorrect/102/program102.p.p
iPP (ekKyc) it.


j Fq8 (YJE) w (Sn5) :- kXa D (lCF (r3wVU (sJ (Z)) X) (au8UF iVpdN yNOt) K wiS9) (q8cI2 (ZzHmQ)) (O4).


eFe bw (t9 (JrJbl) JcS (U7nC)) (ARb) :- h; p8uf (zYE) (AI) R (uJq bZq (t (U) N1 c)), rm48 (vIe96 IP81 (x iVz) gC), rhe (f W5F (w8H (D)) (Cke2)), leEc; ocpv (I) bog XP (IPSYE), (e (EvZN) (P)), tbqDV (xeGPx) v L, iKT Qli DqgEq, o U35d (Wc), uudW EQXP (Ab) TGSP G6fv, m (hu (KP01Z) (kuBAI IaB3W uV (tRy (l70Gc G (aRiuj (sp0) (A) (ICR) (eP9AB oaqjt P O ORAw))) p NKU kOHQ) (V8)) (SadY) MQF3), vV (M) (i5CjA), z (SP3) MNefT (O) nl1m.
bB h jr K E :- ((n); o).


rMFm4 (V) k (GBuhs) (S9).

nZ.


p R7 (oS6qL B RBKa (JMh9) b) fHi (Z).
kn J (k4gLl RWl (G) s6fCA nR8iH) A Qx.

ahu1 Rx (Y9v) (b SsM u1qce) :- r (hfvfZ da (gU (qC bEs) gq1) (Td) (BWb)) yBP5l.
tTAGu (a7D d0 e) hdLad (RL) :- ((dv (GA) X9Eq (T) wUhr; o0wra, (oadQ5 cd43j)); fX8Q (nOoE) (q (xcQ Pe Wes) Kf); i (SJvG) (na0), kFE v5ZkR YOTj; l (D73Dt) S4s7 (vV i9Q9), fBPH TB).
uh NtPB ZUGIS :- jneMb, vwwVv (apvL XB8j zO (v5 (N)) vQ) BWT (iPl); zVk, uVJw (yNQdj p (wtEaP c4q Sf (CbmTd)) (bDv Wi4X) (Ugx32)) (ega t zotM); vJnq (uZu3H JOzPS (zdr (TuU1g) (tv (p (Nf) i (qttwS jP (S) (LE)))) B (TbT8)) DC f) (HG) (AXDr) S8ek, qUg ubZn; wBT (Qm) Gi TsFZ4 h0; gi PmH Gw sCtPP, y eR, qzSTy xW8g (v (cqWhQ Ls BY (zyk4 (eTX1Z (HF)) (Gt9hB)) yIDY9) (HrPh) ZRXF0 qV2), v (fEUrH (SSsT) (OjRR6) W6J7j BP) (Y); fPB1 gOcN (E) O, d (q (H8Xg) wm J9Rs5) (OO); aI YD (y5c) ZpC; u (r9Ia1 (ey70 rt) l (di9e DbG8Z (lXT0)) nA4) KCxdj (CKAC) (B).
g5W (OicL4) (hC (jU O t) Q) :- zusk xDB1 Ee Zww (Pg), a; zWH H35 (eeC (iMJ0 GwUa y) (P9)), v9b1 clVe (r2Lic Oh (m09y)) (p QHReO qqYc N7), zG49; lwyi (BS) (IDem) MNw ekB; z Z (vo (kJldm u Xx) (PE6Q) dZ (H2)) (Y1) (Q4s), (nw2Zb); (ocBR (f)); (nE gb6); fAh (u0tI YuQ (AOKC) S7) (R) (Yfxs) (HEy9).
? q (bV (flB (O03y) (AxZNq)) (o9Pl V5 (EkUz) (W) (Y8T)) VT) (j9VE) XB8.